<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tara.filmapp.LoginActivity">

    <LinearLayout
        android:layout_margin = "5sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:layout_margin="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin = "15sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/editTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin = "15sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin = "15sp"
            android:id="@+id/buttonSignIn"
            android:textColor="#FFF"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin = "15sp"
            android:textAlignment="center"
            android:text="@string/sign_up_here"
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
